--- a/webapp/view/comment.html
+++ b/webapp/view/comment.html
@@ -2,10 +2,10 @@
 <header>
 	<div class="btn-container">
 		<div class="btn-left">
-			<a href="/" class="btn back-btn" data-navigo>zurück</a>
+			<a href="/" class="btn back-btn" data-navigo><span>zurück</span></a>
 		</div>
 		<div class="btn-right">
-			<a class="btn skip-btn">skip</a>
+			<a class="btn skip-btn"><span>skip</span></a>
 		</div>
 	</div>
 	<div class="progress-bar">
@@ -18,7 +18,7 @@
 	<div class="swipe-approve"></div>
 
 	<div class="comment-counter">&nbsp;</div>
-	<div class="comment-title">&nbsp;</div>
+	<a class="comment-title" href="" target="_blank">&nbsp;</a>
 
 	<div class="discussion-container collapsed"></div>
 	<div class="comment-container new">
@@ -34,6 +34,7 @@
 			<div class="comment-user"></div>
 			<div class="comment-toxicity"></div>
 			<div class="comment-timestamp"></div>
+			<div class="comment-user-stats"></div>
 		</div>
 		<div class="comment-content"></div>
 	</div>
