--- a/webapp/view/reply.html
+++ b/webapp/view/reply.html
@@ -1,7 +1,7 @@
 <header>
 	<div class="btn-container">
 	  <div class="btn-left">
-		<a class="btn back-btn" id="back-btn">zurück</a>
+		<a class="btn back-btn" id="back-btn"><span>zurück</span></a>
 	  </div>
 	</div>
 
@@ -11,7 +11,7 @@
 <div class="wrapper">
 	<div class="comment-reply">
 		<div class="comment-user">&nbsp;</div>
-		<div class="comment-content">&nbsp;</div>
+		<div class="comment-content"><p></p></div>
 		<textarea class="reply-input" placeholder="Schreibe hier deine Antwort"></textarea>
 		<div class="comment-reply-container">
 			<div class="comment-status">
