--- a/webapp/Piliana/1.0.0/view/dashboard.html
+++ b/webapp/Piliana/1.0.0/view/dashboard.html
@@ -3,14 +3,17 @@
 <h1 id="mainHeading">Dashboard</h1>
 <section id="ownStorys" class="loading">
 	<h2 class="heading">Eigene Storys</h2>
-	<div class="discussion-slider">
-		<ul class="slider"></ul>
+	<div class="discussion-slider js_slider simple">
+		<div class="frame js_frame">
+			<ul class="slides js_slides"></ul>
+		</div>
 	</div>
 </section>
 <section id="allStorys">
 	<h2 class="heading">Alle Storys</h2>
-	<div class="discussion-slider">
-		<ul class="slider"></ul>
+	<div class="discussion-slider js_slider simple">
+		<div class="frame js_frame">
+			<ul class="slides js_slides"></ul>
+		</div>
 	</div>
 </section>
-<script src="js/dashboard.js"></script>
