--- a/webapp/Piliana/1.0.0/css/piliana.css
+++ b/webapp/Piliana/1.0.0/css/piliana.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
+
+/* GENERAL */
 body {
 	background: #FAFAFA;
 	font-family: 'Lato', sans-serif;
@@ -31,18 +34,106 @@ h2.heading {
 .hidden {
 	display: none !important;
 }
-.discussion-slider { width: 100%; height: 150px; padding: 0; overflow: hidden; touch-action: pan-y; }
-.discussion-slider .slider { margin: 0; padding: 0; height: 100%; list-style: none; }
-.discussion-slider .slider li {
-	float: left;
-	margin: 15px 7px;
-	padding: 0;
-	width: 317px;
-	height: 120px;
-	-webkit-box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
-	-moz-box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
-	box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
+.wrapper {
 	position: relative;
+	margin-bottom: 2em;
+}
+
+
+/* ICONS */
+.icon {
+	background-image: url('../media/sprites/icons.png');
+	background-repeat: no-repeat;
+	display: block;
+}
+
+.icon-approve {
+	width: 24px;
+	height: 17px;
+	background-position: -53px -10px;
+}
+
+.icon-delete {
+	width: 18px;
+	height: 18px;
+	background-position: -47px -46px;
+}
+
+.icon-reply {
+	width: 19px;
+	height: 14px;
+	background-position: -96px -10px;
+}
+
+
+
+/* LOADER */
+.loaderOverlay {
+	position: fixed;
+	background: rgba(255,255,255,0.8);
+	width: 100%;
+	height: 100%;
+	display: table;
+	z-index: 20;
+	pointer-events: none;
+}
+.loader {
+	display: inline-block;
+	position: absolute;
+	width: 46px;
+	height: 46px;
+	top:50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+.loader div {
+	box-sizing: border-box;
+	display: block;
+	position: absolute;
+	width: 35px;
+	height: 35px;
+	margin: 6px;
+	border: 4px solid #7ED321;
+	border-radius: 50%;
+	animation: loader 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+	border-color: #7ED321 transparent transparent transparent;
+}
+.loader div:nth-child(1) {
+	animation-delay: -0.45s;
+}
+.loader div:nth-child(2) {
+	animation-delay: -0.3s;
+}
+.loader div:nth-child(3) {
+	animation-delay: -0.15s;
+}
+@keyframes loader {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+.error-msg {
+	display: table-cell;
+	vertical-align: middle;
+	padding: 0 15px;
+	-ms-word-break: break-all;
+	word-break: break-all;
+	color: #F40F97;
+	text-align: center;
+}
+
+
+
+/* DISCUSSION VIEW */
+.discussion-slider {
+	width: 100%;
+	height: 150px;
+	padding: 0;
+	overflow: hidden;
+	touch-action: pan-y;
 }
 .discussion-slider .dashboard-meta {
 	display: flex;
@@ -71,14 +162,111 @@ h2.heading {
 	display: inline-block;
 	height: 100%;
 	width: 100%;
+	white-space: normal;
 }
-.wrapper {
+.frame {
 	position: relative;
-	margin-bottom: 2em;
+	width: 317px;
+	margin: 0 auto;
+	white-space: nowrap;
 }
-.wrapper.grey {
-	/*background: #FAFAFA;*/
+
+.frame li {
+	position: relative;
+	display: inline-block;
+	height: 120px;
+	-webkit-box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
+	-moz-box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
+	box-shadow: 0px 1px 19px 0px rgba(0,0,0,0.13);
 }
+
+.slides {
+	display: inline-block;
+}
+
+.simple > .frame li {
+	width: 317px;
+	margin-right: 14px;
+}
+
+.simple > .frame li:last-child {
+	margin-right: 0;
+}
+
+.dashboard-flag {
+	position: absolute;
+	top: -12px;
+	right: -5px;
+}
+.dashboard-flag .flag-corner {
+	width: 0;
+	height: 0;
+	border-right: 7px solid transparent;
+}
+
+.dashboard-flag .flag-box {
+	color: #ffffff;
+	font-size: 0.5em;
+	width: 34px;
+	height: 20px;
+	border-radius: 3px 3px 3px 0;
+	text-align: center;
+	line-height: 20px;
+}
+
+.dashboard-flag.magenta .flag-box {
+	background: #F40F97;
+}
+.dashboard-flag.magenta .flag-corner {
+	border-top: 7px solid #F40F97;
+}
+.dashboard-flag.blue .flag-box {
+	background: #00C1F6;
+}
+.dashboard-flag.blue .flag-corner {
+	border-top: 7px solid #00C1F6;
+}
+.dashboard-flag.green .flag-box {
+	background: #7ED321;
+}
+.dashboard-flag.green .flag-corner {
+	border-top: 7px solid #7ED321;
+}
+.discussion-slider {
+	position: relative;
+}
+.discussion-slider .slides {
+	background: #FAFAFA;
+}
+.discussion-slider:before {
+	content: 'keine Storys vorhanden';
+	font-size: 1.5em;
+	font-weight: bold;
+	text-align: center;
+	opacity: 0.3;
+	position: absolute;
+	top: 50%;
+	margin-top: -0.8em;
+	width: 100%;
+	z-index: -1;
+}
+.discussion-slider:after {
+	content: '';
+	width: 317px;
+	height: 120px;
+	border: 1px solid #9B9B9B;
+	opacity: 0.2;
+	position: absolute;
+	top: 15px;
+	left: 50%;
+	margin-left: -160px;
+	z-index: -1;
+}
+
+
+
+/* COMMENTS VIEW */
+/* header */
 header {
 	height: 55px;
 }
@@ -157,6 +345,8 @@ progress::-webkit-progress-value {
 	-o-transition : width .3s ease;
 	transition : width .3s ease;
 }
+
+/* comments */
 .comment-counter {
 	text-align: center;
 	font-size: 0.8em;
@@ -273,6 +463,9 @@ progress::-webkit-progress-value {
 	height: 100%;
 	left: 0;
 	top: 0;
+}
+.comment-content .comment-youtube .youtube_wrapper {
+
 }
 .comment-staple {
 	opacity: 0.85;
@@ -480,11 +673,10 @@ progress::-webkit-progress-value {
 }
 .comment-status {
 	text-align: center;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100vh;
 	width: 100%;
 	background: rgba(255, 255, 255, 0.75);
 	display: none;
@@ -499,6 +691,7 @@ progress::-webkit-progress-value {
 	top: 50%;
 	margin-top: -20px;
 	display: none;
+	text-shadow: 0px 0px 20px white;
 }
 .comment-status.hidden .approved,
 .comment-status.hidden .deleted {
@@ -510,6 +703,10 @@ progress::-webkit-progress-value {
 .comment-status .deleted {
 	color: #F40F97;
 }
+
+
+
+/* REPLY VIEW */
 .comment-reply {
 	padding: 0.8em 0;
 	margin: 0 1.25em 0;
