--- a/webapp/Piliana/1.0.0/view/reply.html
+++ b/webapp/Piliana/1.0.0/view/reply.html
@@ -1,7 +1,8 @@
+<div class="loaderOverlay" style="display:none;"><div class="loader"><div></div><div></div><div></div><div></div></div></div>
 <header>
 	<div class="btn-container">
 	  <div class="btn-left">
-		<a class="btn back-btn" id="back-btn"><span>zurück</span></a>
+		<a href="javascript:void();" class="btn back-btn" id="back-btn"><span>zurück</span></a>
 	  </div>
 	</div>
 
@@ -12,22 +13,11 @@
 	<div class="comment-reply">
 		<div class="comment-user">&nbsp;</div>
 		<div class="comment-content"><p></p></div>
+		<div class="comment-status"><div class="approved">Freigeschaltet</div></div>
 		<textarea class="reply-input" placeholder="Schreibe hier deine Antwort"></textarea>
-		<div class="comment-reply-container">
-			<div class="comment-status">
-				<div class="approved">Freigeschaltet</div>
-			</div>
-		</div>
 		<div class="reply-status-message"></div>
 	</div>
 	<div class="comment-reply-btn off">
 		<a class="reply-approve-btn">antworten & freischalten</a>
 	</div>
-	<div class="comment-reply load">
-		<div class="loader-circle"></div>
-		<canvas height="70" width="70" id="loader" />
-	</div>
 </div>
-
-<script src="js/loader.js"></script>
-<script src="js/reply.js"></script>
